force-app/main/default/objects/Account/fields/Commissions_agent_account__c.field-meta.xml
<CustomField>
    <fullName>Commissions_agent_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commissions agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Commissions agent)</relationshipLabel>
    <relationshipName>CommissionsAgent</relationshipName>
    <type>Lookup</type>
</CustomField>