force-app/main/default/objects/Account/fields/Courtesy_Copy__c.field-meta.xml
<CustomField>
    <fullName>Courtesy_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Courtesy Copy</label>
    <type>Checkbox</type>
</CustomField>