force-app/main/default/objects/Account/fields/Cust_Serv_Rep__c.field-meta.xml
<CustomField>
    <fullName>Cust_Serv_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cust Serv Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Cust Serv Rep)</relationshipLabel>
    <relationshipName>ContactsCustServRep</relationshipName>
    <type>Lookup</type>
</CustomField>