force-app/main/default/objects/Account/fields/Domestic_Broker__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Broker__c</fullName>
    <label>Domestic Broker</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>