force-app/main/default/objects/Account/fields/Domestic_Broker_Text__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Broker_Text__c</fullName>
    <inlineHelpText>Inform only numbers with maximum 7 characters</inlineHelpText>
    <label>Domestic Broker</label>
    <length>7</length>
    <type>Text</type>
</CustomField>