force-app/main/default/objects/Account/fields/EvergageAction_Click_Calculate_Your_R__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_Click_Calculate_Your_R__c</fullName>
    <description>Uses of action &apos;Click Calculate Your Results&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;Click Calculat&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>