force-app/main/default/objects/Account/fields/EvergageAction_Click_Choose_Region_an__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_Click_Choose_Region_an__c</fullName>
    <description>Uses of action &apos;Click Choose Region and Crop&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;Click Choose R&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>