force-app/main/default/objects/Account/fields/EvergageAction_Click_Download_PDF__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_Click_Download_PDF__c</fullName>
    <description>Uses of action &apos;Click Download PDF&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;Click Download&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>