force-app/main/default/objects/Account/fields/EvergageAction_Played_Video__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_Played_Video__c</fullName>
    <description>Uses of action &apos;Played Video&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;Played Video&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>