force-app/main/default/objects/Account/fields/EvergageAction_Submit_Calculator_Requ__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_Submit_Calculator_Requ__c</fullName>
    <description>Uses of action &apos;Submit Calculator Request Form&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;Submit Calcula&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>