force-app/main/default/objects/Account/fields/EvergageAction_Use_Dealer_Locator_For__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_Use_Dealer_Locator_For__c</fullName>
    <description>Uses of action &apos;Use Dealer Locator Form&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;Use Dealer Loc&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>