force-app/main/default/objects/Account/fields/EvergageAction_View_AG_College_Page__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_View_AG_College_Page__c</fullName>
    <description>Uses of action &apos;View AG College Page&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;View AG Colleg&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>