force-app/main/default/objects/Account/fields/EvergageAction_View_Aspire_ROI_Calcul__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_View_Aspire_ROI_Calcul__c</fullName>
    <description>Uses of action &apos;View Aspire ROI Calculator&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;View Aspire RO&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>