force-app/main/default/objects/Account/fields/EvergageAction_View_Dealer_Locator_Pa__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_View_Dealer_Locator_Pa__c</fullName>
    <description>Uses of action &apos;View Dealer Locator Page&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;View Dealer Lo&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>