force-app/main/default/objects/Account/fields/EvergageAction_View_TR_Trial_Data_Pag__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_View_TR_Trial_Data_Pag__c</fullName>
    <description>Uses of action &apos;View TR Trial Data Page&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;View TR Trial &apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>