force-app/main/default/objects/Account/fields/EvergageActiveUsers__c.field-meta.xml
<CustomField>
    <fullName>EvergageActiveUsers__c</fullName>
    <description>Active users count</description>
    <label>Evergage Active Users</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>