force-app/main/default/objects/Account/fields/EvergageLink__c.field-meta.xml
<CustomField>
    <fullName>EvergageLink__c</fullName>
    <description>Link to the Evergage page</description>
    <label>Evergage Link</label>
    <type>Url</type>
</CustomField>