force-app/main/default/objects/Account/fields/PMC_CPI_IntegrationMessage__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPI_IntegrationMessage__c</fullName>
    <label>PMC CPI IntegrationMessage</label>
    <type>TextArea</type>
</CustomField>