force-app/main/default/objects/Account/fields/PMC_CPI_IntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPI_IntegrationStatus__c</fullName>
    <label>PMC CPI IntegrationStatus</label>
    <length>128</length>
    <type>Text</type>
</CustomField>