force-app/main/default/objects/Account/fields/PMC_CPQ_FlowAccountVRByPassToggle__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_FlowAccountVRByPassToggle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Account VR ByPassToggle</label>
    <type>Checkbox</type>
</CustomField>