force-app/main/default/objects/Account/fields/PMC_DH_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Account_Status__c</fullName>
    <description>GSMD-144 - Updated Picklist value with Invalid.</description>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>