force-app/main/default/objects/Account/fields/PMC_DH_Email__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Email__c</fullName>
    <description>Specifies the email to be displayed on the portal for Account details.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>