force-app/main/default/objects/Account/fields/PMC_IsActive__c.field-meta.xml
<CustomField>
    <fullName>PMC_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>