force-app/main/default/objects/Account/fields/PMC_SS_AccountOwnerFullName__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccountOwnerFullName__c</fullName>
    <description>Full name of Account Owner</description>
    <formula>Owner.FirstName &amp; &apos; &apos; &amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Full Name</label>
    <type>Text</type>
</CustomField>