force-app/main/default/objects/Account/fields/PMC_SS_ActionPlan__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ActionPlan__c</fullName>
    <description>Action Plan for addressing the Account</description>
    <label>Action Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>