force-app/main/default/objects/Account/fields/PMC_SS_Address_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Address_Coordinates__c</fullName>
    <description>Geolocation Coordinates for this Account&apos;s Address</description>
    <label>Address Coordinates</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>