force-app/main/default/objects/Account/fields/PMC_SS_AddressDistrict__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AddressDistrict__c</fullName>
    <label>Address District</label>
    <length>40</length>
    <type>Text</type>
</CustomField>