force-app/main/default/objects/Account/fields/PMC_SS_AddressNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AddressNumber__c</fullName>
    <inlineHelpText>If there is no number, fill in the text “SN”</inlineHelpText>
    <label>Address Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>