force-app/main/default/objects/Account/fields/PMC_SS_AdvancedAccountForecastSetUse__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AdvancedAccountForecastSetUse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look-up field to help the user navigate to forecast set use record.</description>
    <label>Advanced Account Forecast Set Use</label>
    <referenceTo>AdvAcctForecastSetUse</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>