force-app/main/default/objects/Account/fields/PMC_SS_AgentCode__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AgentCode__c</fullName>
    <description>Code for Agent Type Accounts</description>
    <label>Agent Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>