force-app/main/default/objects/Account/fields/PMC_SS_BillToAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_BillToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>look-up field on the Sold-to Account that is looking up to the Bill-to Account</description>
    <label>Bill-to partner related</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Bill-to</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sold-tos</relationshipLabel>
    <relationshipName>Sold_tos</relationshipName>
    <type>Lookup</type>
</CustomField>