force-app/main/default/objects/Account/fields/PMC_SS_Channel__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Channel__c</fullName>
    <description>Channels to which the Account belongs in.</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture/Fertilizer</fullName>
            </value>
            <value>
                <fullName>Cooperative</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>End-Users</fullName>
            </value>
            <value>
                <fullName>Feed</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>International Sales</fullName>
            </value>
            <value>
                <fullName>Retailers</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Specialty/Co-Products</fullName>
            </value>
            <value>
                <fullName>Trading</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
                <isActive>false</isActive>
                <label>Basic</label>
            </value>
            <value>
                <fullName>Grow</fullName>
                <isActive>false</isActive>
                <label>Grow</label>
            </value>
            <value>
                <fullName>Prime</fullName>
                <isActive>false</isActive>
                <label>Prime</label>
            </value>
            <value>
                <fullName>Resellers</fullName>
                <isActive>false</isActive>
                <label>Resellers</label>
            </value>
            <value>
                <fullName>Ultra</fullName>
                <isActive>false</isActive>
                <label>Ultra</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>