force-app/main/default/objects/Account/fields/PMC_SS_CityState__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CityState__c</fullName>
    <formula>BillingCity &amp; &quot;, &quot; &amp;  BillingState</formula>
    <label>City, State</label>
    <type>Text</type>
</CustomField>