force-app/main/default/objects/Account/fields/PMC_SS_ClientGroup__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ClientGroup__c</fullName>
    <description>States the Client Group the Account belongs to</description>
    <label>Client Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Pool de Compra</fullName>
            </value>
            <value>
                <fullName>Top Cooperativa</fullName>
            </value>
            <value>
                <fullName>Top Revenda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>