force-app/main/default/objects/Account/fields/PMC_SS_CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CompanyCode__c</fullName>
    <description>Field for the Company Code</description>
    <label>Company Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>4150</fullName>
                <isActive>false</isActive>
                <label>4150</label>
            </value>
            <value>
                <fullName>4001</fullName>
                <label>Fospar SA</label>
            </value>
            <value>
                <fullName>4680</fullName>
                <label>Minera Miski Mayo</label>
            </value>
            <value>
                <fullName>1030</fullName>
                <label>Mos. Sulphur Partner</label>
            </value>
            <value>
                <fullName>1026</fullName>
                <label>Mosaic Ag Innov Sol</label>
            </value>
            <value>
                <fullName>2001</fullName>
                <label>Mosaic CA Colonsay</label>
            </value>
            <value>
                <fullName>2000</fullName>
                <label>Mosaic CA Crop Nutri</label>
            </value>
            <value>
                <fullName>2002</fullName>
                <label>Mosaic CA Esterhazy</label>
            </value>
            <value>
                <fullName>2003</fullName>
                <label>Mosaic CA ULC (BP)</label>
            </value>
            <value>
                <fullName>1003</fullName>
                <label>Mosaic CN Fertilizer</label>
            </value>
            <value>
                <fullName>6400</fullName>
                <label>Mosaic Fert. (HK)</label>
            </value>
            <value>
                <fullName>4600</fullName>
                <label>Mosaic Fert Bahamas</label>
            </value>
            <value>
                <fullName>6002</fullName>
                <label>Mosaic Fert BMF</label>
            </value>
            <value>
                <fullName>4000</fullName>
                <label>Mosaic Fert Brasil</label>
            </value>
            <value>
                <fullName>1004</fullName>
                <label>Mosaic Fertilizer</label>
            </value>
            <value>
                <fullName>4005</fullName>
                <label>Mosaic Fert P&amp;K</label>
            </value>
            <value>
                <fullName>4620</fullName>
                <label>Mosaic Fert Paraguay</label>
            </value>
            <value>
                <fullName>6000</fullName>
                <label>Mosaic Fert QMF</label>
            </value>
            <value>
                <fullName>6001</fullName>
                <label>Mosaic Fert YMF</label>
            </value>
            <value>
                <fullName>1002</fullName>
                <label>Mosaic Global Sales</label>
            </value>
            <value>
                <fullName>6500</fullName>
                <label>Mosaic India Pvt Ltd</label>
            </value>
            <value>
                <fullName>1005</fullName>
                <label>Mosaic Potash Carlsb</label>
            </value>
            <value>
                <fullName>4004</fullName>
                <label>Mosaic Potássio Mine</label>
            </value>
            <value>
                <fullName>1025</fullName>
                <label>Tampa Port Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>