force-app/main/default/objects/Account/fields/PMC_SS_CounterpartyContact2__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CounterpartyContact2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contract Counterparty Contact Record</description>
    <label>Counterparty Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Counterparty Contact 2)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>