force-app/main/default/objects/Account/fields/PMC_SS_CPF__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CPF__c</fullName>
    <label>Tax ID or CPF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>