force-app/main/default/objects/Account/fields/PMC_SS_CreditExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CreditExpirationDate__c</fullName>
    <description>Date Credit expires, derived from SAP</description>
    <label>Credit Expiration Date</label>
    <type>Date</type>
</CustomField>