force-app/main/default/objects/Account/fields/PMC_SS_Crops__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Crops__c</fullName>
    <description>Crops Account Grows</description>
    <label>Crops</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_SS_Crops</valueSetName>
    </valueSet>
</CustomField>