force-app/main/default/objects/Account/fields/PMC_SS_FioriLink__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_FioriLink__c</fullName>
    <formula>HYPERLINK($Label.PMC_SS_AccountDispute_FioriLinks,&apos;Account Dispute Fiori Link&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiori Link</label>
    <type>Text</type>
</CustomField>