force-app/main/default/objects/Account/fields/PMC_SS_LastInteractionDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_LastInteractionDate__c</fullName>
    <description>Last date of activity on related records</description>
    <label>Last Interaction Date</label>
    <type>DateTime</type>
</CustomField>