force-app/main/default/objects/Account/fields/PMC_SS_Lockbox__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Lockbox__c</fullName>
    <inlineHelpText>US &amp; CA - by Postal Code</inlineHelpText>
    <label>Lockbox</label>
    <length>10</length>
    <type>Text</type>
</CustomField>