force-app/main/default/objects/Account/fields/PMC_SS_OverdelTolerance__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_OverdelTolerance__c</fullName>
    <defaultValue>(0.35)</defaultValue>
    <label>Overdel. Tolerance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>