force-app/main/default/objects/Account/fields/PMC_SS_Parents_SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Parents_SAP_Customer_Number__c</fullName>
    <formula>Parent.PMC_SS_SAPCustomerNumber__c</formula>
    <label>Parent’s SAP Customer Number</label>
    <type>Text</type>
</CustomField>