force-app/main/default/objects/Account/fields/PMC_SS_PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_PaymentTerm__c</fullName>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_DG_PaymentTerms</valueSetName>
    </valueSet>
</CustomField>