force-app/main/default/objects/Account/fields/PMC_SS_ReconciliationAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ReconciliationAccount__c</fullName>
    <description>Picklist value for Reconciliation Account</description>
    <label>Reconciliation Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>111001</fullName>
                <label>A/R Non-Trade - External Receivables</label>
            </value>
            <value>
                <fullName>110201</fullName>
                <label>A/R Rec Account - Affiliate Trade Receivables</label>
            </value>
            <value>
                <fullName>110003</fullName>
                <label>A/R Rec Account - External Trade Receivables</label>
            </value>
            <value>
                <fullName>110101</fullName>
                <label>A/R Rec Account - Intercompany Trade Receivables</label>
            </value>
            <value>
                <fullName>110104</fullName>
                <label>AR Intercompany Other</label>
            </value>
            <value>
                <fullName>244003</fullName>
                <label>Downpayments from Customers</label>
            </value>
            <value>
                <fullName>244005</fullName>
                <label>Downpayments from Customers for Contracts</label>
            </value>
            <value>
                <fullName>141019</fullName>
                <label>Inter State AR Clearing A/C</label>
            </value>
            <value>
                <fullName>111201</fullName>
                <label>Load A/R Non-Trade - Affiliate Receivables</label>
            </value>
            <value>
                <fullName>190002</fullName>
                <label>Notes Rec - External LT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>