force-app/main/default/objects/Account/fields/PMC_SS_RecordType__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_RecordType__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <description>Stores Record Type of Account</description>
    <label>Record Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>