force-app/main/default/objects/Account/fields/PMC_SS_RegionalManager__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_RegionalManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>States the Regional Manager</description>
    <label>Regional Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>