force-app/main/default/objects/Account/fields/PMC_SS_SalesDistrict__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SalesDistrict__c</fullName>
    <description>A geographical region that aligns with industry standard sales territories.</description>
    <label>Sales District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z00001</fullName>
                <label>Z00001 - AG MBP</label>
            </value>
            <value>
                <fullName>Z00002</fullName>
                <label>Z00002 - AG Non – MBP</label>
            </value>
            <value>
                <fullName>CA0002</fullName>
                <label>CA0002 - Alberta</label>
            </value>
            <value>
                <fullName>Z00043</fullName>
                <label>Z00043 - Asia</label>
            </value>
            <value>
                <fullName>Z00044</fullName>
                <label>Z00044 - Australia</label>
            </value>
            <value>
                <fullName>ZCN010</fullName>
                <label>ZCN010 - Bend</label>
            </value>
            <value>
                <fullName>ZCN093</fullName>
                <label>ZCN093 - B2B</label>
            </value>
            <value>
                <fullName>ZCN037</fullName>
                <label>ZCN037 - B2B AG</label>
            </value>
            <value>
                <fullName>BR0005</fullName>
                <label>BR0005 - Central West Brazil</label>
            </value>
            <value>
                <fullName>Z00030</fullName>
                <label>Z00030 - Corn belt</label>
            </value>
            <value>
                <fullName>Z00032</fullName>
                <label>Z00032 - Delta</label>
            </value>
            <value>
                <fullName>Z00040</fullName>
                <label>Z00040 - East Coast</label>
            </value>
            <value>
                <fullName>ZCN015</fullName>
                <label>ZCN015 - East-B2B</label>
            </value>
            <value>
                <fullName>Z00034</fullName>
                <label>Z00034 - Eastern Canada</label>
            </value>
            <value>
                <fullName>CN0004</fullName>
                <label>CN0004 - Eastern China</label>
            </value>
            <value>
                <fullName>Z00031</fullName>
                <label>Z00031 - Eastern Corn Belt</label>
            </value>
            <value>
                <fullName>IN0004</fullName>
                <label>IN0004 - Eastern Indian</label>
            </value>
            <value>
                <fullName>ZCN008</fullName>
                <label>ZCN008 - Export</label>
            </value>
            <value>
                <fullName>Z00004</fullName>
                <label>Z00004 - Feed Key</label>
            </value>
            <value>
                <fullName>Z00005</fullName>
                <label>Z00005 - Feed Opportunistic</label>
            </value>
            <value>
                <fullName>Z00003</fullName>
                <label>Z00003 - Feed Strategic</label>
            </value>
            <value>
                <fullName>ZBR004</fullName>
                <label>ZBR004 - Fospar BR</label>
            </value>
            <value>
                <fullName>ZBR008</fullName>
                <label>ZBR008 - Frederico Seckler</label>
            </value>
            <value>
                <fullName>ZCN003</fullName>
                <label>ZCN003 - HB-HN</label>
            </value>
            <value>
                <fullName>Z00021</fullName>
                <label>Z00021 - India</label>
            </value>
            <value>
                <fullName>Z00006</fullName>
                <label>Z00006 - Industrial Tier I</label>
            </value>
            <value>
                <fullName>Z00007</fullName>
                <label>Z00007 - Industrial Tier II</label>
            </value>
            <value>
                <fullName>Z00008</fullName>
                <label>Z00008 - Industrial Tier III</label>
            </value>
            <value>
                <fullName>ZBR002</fullName>
                <label>ZBR002 - João Sampaio</label>
            </value>
            <value>
                <fullName>ZCN013</fullName>
                <label>ZCN013 - JS-AH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>