force-app/main/default/objects/Account/fields/PMC_SS_SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SalesOffice__c</fullName>
    <description>States the Sales Office for the Account.</description>
    <label>Sales Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_SalesOffice</valueSetName>
    </valueSet>
</CustomField>